[package]
name = "rushy-preview"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[lints]
workspace = true

[dependencies]
# https://github.com/tokio-rs/axum
axum = "0.8.1"
# https://github.com/tokio-rs/tokio
tokio = { version = "1.42.0", features = ["full"] }
# https://github.com/dotenv-rs/dotenv
dotenv = "0.15.0"
# https://github.com/rust-headless-chrome/rust-headless-chrome
headless_chrome = { version = "1.0.15", features = ["fetch"] }
# https://github.com/seanmonstar/reqwest
reqwest = { version = "0.12.12", features = ["json"] }
# https://github.com/rust-scraper/scraper
scraper = "0.22.0"
# https://github.com/serde-rs/serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# https://github.com/launchbadge/sqlx
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
# https://github.com/redis-rs/redis-rs
redis = { version = "0.27.6", features = ["tokio-comp"] }
# https://github.com/dtolnay/thiserror
thiserror = "2.0.9"
# https://github.com/dtolnay/async-trait
async-trait = "0.1"

[dev-dependencies]
anyhow = "1.0"
